# teste_ocr_img2str

./: .gitignore  README.md  pyproject.toml
img2str/: img2str-v1.py  img2str-v2.py  img2str.py  teste.py  v2.py  v3.py
